Cập Nhật Thêm Sửa Xóa

--- a/EShopping/EShopping/EShopping.csproj
+++ b/EShopping/EShopping/EShopping.csproj
@@ -171,7 +171,17 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Administrator\AdministratorAreaRegistration.cs" />
+    <Compile Include="Areas\Administrator\Controllers\AboutsController.cs" />
     <Compile Include="Areas\Administrator\Controllers\AdminController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\BranchesController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\ColorsController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\ContactsController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\MenusController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\PromitionsController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\RegionsController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\ShippersController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\SizesController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\SuppliersController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -1245,6 +1255,56 @@
     <Content Include="Content\LibAdmin\plugins\popper\umd\popper-utils.min.js.map" />
     <Content Include="Content\LibAdmin\plugins\popper\umd\popper.js.map" />
     <Content Include="Content\LibAdmin\plugins\popper\umd\popper.min.js.map" />
+    <Content Include="Areas\Administrator\Views\Sizes\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Sizes\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Sizes\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Sizes\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Sizes\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Colors\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Colors\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Colors\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Colors\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Colors\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Contacts\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Contacts\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Contacts\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Contacts\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Contacts\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Branches\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Branches\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Branches\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Branches\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Branches\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Abouts\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Abouts\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Abouts\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Abouts\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Abouts\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Menus\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Menus\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Menus\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Menus\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Menus\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Shippers\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Shippers\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Shippers\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Shippers\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Shippers\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Suppliers\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Suppliers\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Suppliers\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Suppliers\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Suppliers\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Regions\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Regions\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Regions\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Regions\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Regions\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Promitions\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\Promitions\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\Promitions\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\Promitions\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\Promitions\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
