--- a/EShopping/EShopping/EShopping.csproj
+++ b/EShopping/EShopping/EShopping.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MNCategoriesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1359,6 +1360,7 @@
     <Content Include="Areas\Administrator\Views\Sizes\Details.cshtml" />
     <Content Include="Areas\Administrator\Views\Sizes\Edit.cshtml" />
     <Content Include="Areas\Administrator\Views\Sizes\Index.cshtml" />
+    <Content Include="Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -1411,6 +1413,7 @@
     <Content Include="Views\Contact\Contact.cshtml" />
     <Content Include="Views\Shared\_BranchPartial.cshtml" />
     <Content Include="Views\Home\Branch.cshtml" />
+    <Content Include="Views\MNCategories\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
