--- a/EShopping/EShopping/EShopping.csproj
+++ b/EShopping/EShopping/EShopping.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NewController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1301,7 +1302,6 @@
     <Content Include="Areas\Administrator\Views\Menus\Details.cshtml" />
     <Content Include="Areas\Administrator\Views\Menus\Edit.cshtml" />
     <Content Include="Areas\Administrator\Views\Menus\Index.cshtml" />
-    <Content Include="Areas\Administrator\Views\News\Create.cshtml" />
     <Content Include="Areas\Administrator\Views\OrderDetails\Create.cshtml" />
     <Content Include="Areas\Administrator\Views\OrderDetails\Delete.cshtml" />
     <Content Include="Areas\Administrator\Views\OrderDetails\Details.cshtml" />
@@ -1360,6 +1360,11 @@
     <Content Include="Areas\Administrator\Views\Sizes\Edit.cshtml" />
     <Content Include="Areas\Administrator\Views\Sizes\Index.cshtml" />
     <Content Include="Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -1412,7 +1417,6 @@
     <Content Include="Views\Contact\Contact.cshtml" />
     <Content Include="Views\Shared\_BranchPartial.cshtml" />
     <Content Include="Views\Home\Branch.cshtml" />
-    <Content Include="Views\MNCategories\Index.cshtml" />
     <Content Include="Views\Home\Category.cshtml" />
     <Content Include="Views\Shared\_CategoryPartial.cshtml" />
   </ItemGroup>
@@ -1423,6 +1427,7 @@
     <Folder Include="Document\CMD\" />
     <Folder Include="Document\Data Flow\" />
     <Folder Include="UploadImg\Products\" />
+    <Folder Include="Views\New\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
