--- a/EShopping/EShopping/EShopping.csproj
+++ b/EShopping/EShopping/EShopping.csproj
@@ -1354,6 +1354,11 @@
     <Content Include="Areas\Administrator\Views\Sizes\Edit.cshtml" />
     <Content Include="Areas\Administrator\Views\Sizes\Index.cshtml" />
     <Content Include="Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Create.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Delete.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Details.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Edit.cshtml" />
+    <Content Include="Areas\Administrator\Views\News\Index.cshtml" />
     <EntityDeploy Include="Models\ElectricStore.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ElectricStore.Designer.cs</LastGenOutput>
@@ -1371,11 +1376,6 @@
       <DependentUpon>ElectricStore.edmx</DependentUpon>
       <LastGenOutput>ElectricStore.cs</LastGenOutput>
     </Content>
-    <Content Include="Areas\Administrator\Views\News\Create.cshtml" />
-    <Content Include="Areas\Administrator\Views\News\Delete.cshtml" />
-    <Content Include="Areas\Administrator\Views\News\Details.cshtml" />
-    <Content Include="Areas\Administrator\Views\News\Edit.cshtml" />
-    <Content Include="Areas\Administrator\Views\News\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -1431,6 +1431,7 @@
     <Content Include="Views\Home\Category.cshtml" />
     <Content Include="Views\Shared\_CategoryPartial.cshtml" />
     <Content Include="Views\New\News.cshtml" />
+    <Content Include="Views\Home\ProductStyle1Partial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
