--- a/EShopping/EShopping/EShopping.csproj
+++ b/EShopping/EShopping/EShopping.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewController.cs" />
+    <Compile Include="Controllers\ShoppingCartController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -249,6 +250,7 @@
     <Compile Include="Models\Employee_Role.cs">
       <DependentUpon>ElectricStore.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ItemGioHang.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Menu.cs">
@@ -1720,6 +1722,9 @@
     <Content Include="Views\Shared\_CategoryPartial.cshtml" />
     <Content Include="Views\New\News.cshtml" />
     <Content Include="Views\Home\ProductStyle1Partial.cshtml" />
+    <Content Include="Views\ShoppingCart\ShoppingPartial.cshtml" />
+    <Content Include="Views\ShoppingCart\XemGioHang.cshtml" />
+    <Content Include="Views\ShoppingCart\ThongBao.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
